# turbo-stack

./: .gitignore  .gitmodules  build.sh
.github/workflows/: clang-tidy-dryrun.yaml
src/development_tests/amrex/tripolar_grid/: .clang-tidy  build_and_run.sh
src/development_tests/amrex/tripolar_grid/doc/: Doxyfile
src/development_tests/amrex/tripolar_grid/spack/: derecho_spack.yaml  spack.yaml
src/development_tests/amrex/tripolar_grid/src/: CMakeLists.txt
src/development_tests/amrex/tripolar_grid/src/geometry/: CMakeLists.txt  geometry.h  geometry_test.cpp
